Issue #1: Fixed add button placement on smaller screens. Also shortened placeholder text so it wouldn't be cut off on smaller screens

--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ th, small {
 .header-text {
     font-family: "Poppins";
 }
+.vertical-center {
+    min-height: 100%;
+    display: flex;
+    align-items: center;
+  }
 
 #navbar {
     background-image: linear-gradient(90deg, #e98453, #b45277);
@@ -37,7 +42,7 @@ th, small {
     height: 4rem;
     margin-bottom: -2rem;
     right: 0%;
-    bottom: -50%;
+    bottom: 0%;
     border-radius: 50%;
     font-size: 2rem;
 }
